--- a/package.json
+++ b/package.json
@@ -1,31 +1,21 @@
 {
   "name": "naruto-pathfinder",
   "version": "2.0.0",
-  "description": "🍥 Naruto's Pathfinder - Help Naruto find the fastest path to defeat Madara! An interactive A* pathfinding visualizer with epic ninja theme.",
-  "main": "server.js",
+  "description": "🍥 Naruto's Pathfinder - Interactive A* pathfinding visualizer with ninja theme",
+  "main": "index.html",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js",
-    "test": "echo \"No tests specified\"",
-    "build": "echo 'Static site - no build needed'"
+    "dev": "echo 'Open index.html in browser'",
+    "build": "echo 'Static site - no build needed'",
+    "start": "echo 'Static site - no start needed'"
   },
   "keywords": [
-    "pathfinder",
+    "pathfinding",
     "algorithm",
     "visualization",
     "a-star",
     "naruto",
-    "game",
-    "interactive"
+    "game"
   ],
-  "author": "Your Name Here",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.18.2",
-    "compression": "^1.7.4",
-    "helmet": "^7.1.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  }
+  "author": "Your Name",
+  "license": "MIT"
 }
