--- a/package.json
+++ b/package.json
@@ -1,21 +1,31 @@
 {
   "name": "naruto-pathfinder",
   "version": "2.0.0",
-  "description": "🍥 Naruto's Pathfinder - Interactive A* pathfinding visualizer with ninja theme",
-  "main": "index.html",
+  "description": "🍥 Naruto's Pathfinder - Help Naruto find the fastest path to defeat Madara! An interactive A* pathfinding visualizer with epic ninja theme.",
+  "main": "server.js",
   "scripts": {
-    "dev": "echo 'Open index.html in browser'",
-    "build": "echo 'Static site - no build needed'",
-    "start": "echo 'Static site - no start needed'"
+    "start": "node server.js",
+    "dev": "node server.js",
+    "test": "echo \"No tests specified\"",
+    "build": "echo 'Static site - no build needed'"
   },
   "keywords": [
-    "pathfinding",
+    "pathfinder",
     "algorithm",
     "visualization",
     "a-star",
     "naruto",
-    "game"
+    "game",
+    "interactive"
   ],
   "author": "Kent John Dico",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "compression": "^1.7.4",
+    "helmet": "^7.1.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
